ultimos ajustes consejos monitores

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ Además resulta mucho **más fácil compartir** nuestro trabajo de esta manera.
 
 --
 
-Para ejecutar el código en *script* puedes utilizar el *shortcut* .pur[Ctrl + Enter].
+Para ejecutar el código en *script* puedes utilizar el *shortcut* .pur[Ctrl + Enter]. (en Mac Command + Enter)
 
 --
 
@@ -608,7 +608,7 @@ Se pueden hacer cosas mucho más interesantes. Para eso es útil **asignar valor
 
 --
 
-Para esto se utiliza el operador "**&lt;-**" (shortcut **"Alt + -**") 
+Para esto se utiliza el operador "**&lt;-**" (W: shortcut **"Alt + -**" /Mac:  **"option + -"**) 
 
 --
 
