creacion de index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Capacitación en R y herramientas de productividad</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2021-04-30" />
+    <meta name="date" content="2021-05-03" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -1674,7 +1674,9 @@ Es una base de .medium-par-red[alto interés sociológico]. 🧐
 
 --
 
-&lt;img src="sesion_1_files/figure-html/unnamed-chunk-40-1.png" width="700px" height="400px" style="display: block; margin: auto;" /&gt;
+.center[&lt;img src="imagenes/romane.PNG" heigth="400" width="600"/&gt;]
+
+
 
 ---
 
@@ -1685,8 +1687,11 @@ background-position: 100% 0%
 # Volviendo a los *data frames*
 
 --
+&lt;/br&gt;
 
-&lt;img src="sesion_1_files/figure-html/unnamed-chunk-41-1.png" width="700px" height="400px" style="display: block; margin: auto;" /&gt;
+.center[&lt;img src="imagenes/bsb.PNG" heigth="800" width="700"/&gt;]
+
+
 
 
 ---
