arreglos de warnings y messages a false

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Capacitación en R y herramientas de productividad</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2021-05-03" />
+    <meta name="date" content="2021-05-04" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -1664,10 +1664,6 @@ Y luego lo cargamos en nuestra sesión (.pur[no basta con instalarlo para usarlo
 library(guaguas)
 ```
 
-```
-## Warning: package 'guaguas' was built under R version 4.0.4
-```
-
 --
 
 Es una base de .medium-par-red[alto interés sociológico]. 🧐
@@ -1891,7 +1887,7 @@ Por supuesto, también se pueden seleccionar filas y columnas a la vez 🥳.
 
 --
 
-.medium-par-red[¿Cómo lo harían?] Hagamos algunos ejercicios para finalizar.
+.medium-par-red[¿Cómo lo harían?]
 
 ---
 
@@ -1925,14 +1921,6 @@ Cargamos la librería.
 
 ```r
 library(tidyverse)
-```
-
-```
-## Warning: package 'tidyverse' was built under R version 4.0.3
-```
-
-```
-## Warning: package 'purrr' was built under R version 4.0.5
 ```
 
 --
@@ -1983,6 +1971,11 @@ Además **puede ordenarse por más de una variable**.
 arrange(data, desc(anio, n))
 ```
 
+--
+
+Volveremos sobre la función `arrange()` en las próximas sesiones.
+
+
 ---
 
 background-image: url("imagenes/fondo2.PNG")
@@ -2013,9 +2006,6 @@ Con las herramientas para **seleccionar, filtrar y ordenar**, puedes hacerlo de 
 (3). .medium-par-red[bonus:] ¿Cuál es el nombre .medium-par-red[más usado] en Chile en todos los tiempos?
 
 .center[.big-par[🧠]]
-
-
-
 
 ---
 
