--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>INE Educa: Clases abiertas de R</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2023-06-13" />
-    <script src="intro_r-1_files/header-attrs-2.20/header-attrs.js"></script>
+    <meta name="date" content="2023-06-29" />
+    <script src="intro_r-1_files/header-attrs-2.21/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -22,11 +22,9 @@ class: center, middle
 
 ## INE Educa: Clases abiertas de R
 
-## Introducción a R
-
 ## ¿Qué es R y para qué sirve?
 
-## Introducción y herramientas de exploración de datos
+## Proyecto Ciencia de Datos
 
 
 
@@ -65,11 +63,11 @@ background-position: 100% 0%
 
 --
 
-**¡Es muy versátil!** Hoy es utilizado para abordar problemas de **distintas disciplinas**, como estadísticas y ciencia de datos.
+**¡Es muy versátil!** Hoy es utilizado para abordar problemas de **distintas disciplinas**.
 
 --
 
-Posiblemente las **técnicas o metodologías más recientes tengan alguna aplicación en R**. Los investigadores muchas veces publican un paquete del programa en compañía de sus artículos.
+Posiblemente las **técnicas o metodologías más recientes tengan alguna aplicación en R**. Los investigadores muchas veces publican código en compañía de sus artículos.
 
 --
 
@@ -149,7 +147,7 @@ background-position: 100% 0%
 
 --
 
-.medium-par[**Documentos metodológicos Encuesta de Presupuestos Famiiliares (EPF):**]
+.medium-par[**Documentos metodológicos Encuesta de Presupuestos Familiares (EPF):**]
 
 --
 
@@ -203,11 +201,9 @@ class: center, middle
 
 ## INE Educa: Clases abiertas de R
 
-## Introducción a R
-
 ## ¿Qué es R y para qué sirve?
 
-## Introducción y herramientas de exploración de datos
+## Proyecto Ciencia de Datos
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
