arreglar faltas de ortografia

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ background-position: 100% 0%
 
 --
 
-Posiblemente las **técnicas o metodologías más recientes tengan alguna aplicación en R**. Los investigadores muchas veces publican código en compañía de sus artículos.
+Posiblemente, las **técnicas o metodologías más recientes tengan alguna aplicación en R**. Los investigadores muchas veces publican código en compañía de sus artículos.
 
 --
 
-**R esta hecho para el análisis de datos**.
+**R está hecho para el análisis de datos**.
 
 ---
 
@@ -87,11 +87,11 @@ background-position: 100% 0%
 
 --
 
-Cuenta con **poderosas herramientas para comunicar resultados**. Varios paquetes en **R** facilitan la creación de reportes en pdf o en html, así como también para la creación de web interactivas.
+**Poderosas herramientas para comunicar resultados**. Varios paquetes en **R** facilitan la creación de reportes en pdf o en html.
 
 --
 
-Cuenta con un **entorno de desarrollo** diseñado especialmente para el lenguaje R (**RStudio**).
+**Entorno de desarrollo** diseñado especialmente para el lenguaje R (**RStudio**).
 
 --
 
